Fixed bug #40002 (Try/Catch performs poorly)